corrected main content sizing. just need to correct photo sizing and small overlap

--- a/styles.css
+++ b/styles.css
@@ -66,15 +66,15 @@
 }
 .main {
     border: 1px black;
-    width: 1100px;
-    margin: 15px;
-    padding: 15px;
+    width: 1300px;
+    margin: 15px 5px 15px 5px;
+    margin: 15px 5px 15px 5px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 .bio-container {
-    width: 400px; 
+    width: 600px; 
     border: 1px black;
     /*margin: 25px; */
     display: flex;
@@ -95,6 +95,10 @@ button {
     font-size: 25px;
     font-weight: bold;
     margin-top: 15px;
+}
+#generic-image {
+    height: auto;
+    width: 700px;
 }
 
 
